# iceberg-cpp

./: .gitignore  CMakeLists.txt  README.md  index.html
src/: CMakeLists.txt  demo.cc  icebergConfig.cmake.in
src/core/: demo_table.h
src/iceberg/: CMakeLists.txt  IcebergConfig.cmake.in  arrow_c_data_guard_internal.cc  arrow_c_data_util.cc  arrow_c_data_util_internal.h  constants.h  file_io.cc  file_io.h  file_io_registry.cc  file_io_registry.h  file_reader.h  file_writer.h  iceberg_export.h  json_serde.cc  json_serde_internal.h  meson.build  name_mapping.cc  name_mapping.h  partition_spec.cc  partition_spec.h  schema.cc  schema.h  schema_field.h  schema_internal.cc  snapshot.cc  snapshot.h  sort_order.h  table.cc  table.h  table_metadata.cc  table_scan.cc  table_scan.h  transaction.cc  transaction.h  type_fwd.h
src/iceberg/arrow/: arrow_c_data_util.cc  arrow_file_io.h  arrow_fs_file_io.cc  arrow_fs_file_io_internal.h  arrow_io.cc  arrow_io_internal.h  arrow_io_register.cc  arrow_io_register.h  file_io_register.cc  file_io_register.h
src/iceberg/arrow/s3/: CMakeLists.txt  arrow_s3_file_io.cc  s3_properties.h
src/iceberg/avro/: avro_metrics.cc  avro_metrics.h  avro_reader.cc  avro_writer.cc
src/iceberg/catalog/rest/: meson.build  (+17 more)
src/iceberg/data/: data_writer.cc  delete_loader.cc  delete_loader.h  equality_delete_writer.cc  equality_delete_writer.h  file_scan_task_reader.cc  position_delete_writer.cc  position_delete_writer.h
src/iceberg/deletes/: CMakeLists.txt  meson.build  position_delete_index.cc  position_delete_index.h  roaring_position_bitmap.cc  roaring_position_bitmap.h
src/iceberg/expression/: json_serde.cc  json_serde_internal.h  literal.cc  predicate.h
src/iceberg/manifest/: manifest_list.h
src/iceberg/parquet/: parquet_reader.cc  parquet_writer.cc
src/iceberg/puffin/: CMakeLists.txt  file_metadata.cc  file_metadata.h  json_serde.cc  json_serde_internal.h  meson.build  puffin_format.cc  puffin_format.h  type_fwd.h
src/iceberg/test/: CMakeLists.txt  arrow_io_test.cc  arrow_s3_file_io_test.cc  assign_id_visitor_test.cc  auth_manager_test.cc  avro_test.cc  data_writer_test.cc  delete_file_index_test.cc  delete_loader_test.cc  endian_test.cc  expire_snapshots_test.cc  expression_json_test.cc  file_scan_task_test.cc  gzip_decompress_test.cc  in_memory_catalog_test.cc  incremental_append_scan_test.cc  incremental_changelog_scan_test.cc  literal_test.cc  location_provider_test.cc  manifest_evaluator_test.cc  manifest_group_test.cc  manifest_list_versions_test.cc  manifest_reader_stats_test.cc  manifest_reader_test.cc  manifest_writer_versions_test.cc  matchers.h  meson.build  metadata_io_test.cc  metadata_serde_test.cc  parquet_reader_no_projection_test.cc  parquet_test.cc  partition_spec_test.cc  position_delete_index_test.cc  puffin_format_test.cc  puffin_json_test.cc  rest_catalog_integration_test.cc  rest_file_io_test.cc  rest_util_test.cc  retry_util_test.cc  roaring_position_bitmap_test.cc  (+19 more)
src/iceberg/update/: expire_snapshots.cc  expire_snapshots.h  fast_append.cc  fast_append.h  pending_update.cc  pending_update.h  set_snapshot.cc  set_snapshot.h  snapshot_manager.cc  snapshot_update.cc  snapshot_update.h  update_location.cc  update_location.h  update_partition_spec.cc  update_partition_spec.h  update_partition_statistics.cc  update_partition_statistics.h  update_properties.cc  update_properties.h  update_schema.cc  update_schema.h  update_snapshot_reference.cc  update_snapshot_reference.h  update_sort_order.cc  update_sort_order.h  update_statistics.cc  update_statistics.h
src/iceberg/util/: endian.h  meson.build  retry_util.cc  retry_util.h  retry_util_internal.h  string_util.cc  string_util.h  struct_like_set.cc  struct_like_set.h  transform_util.cc  transform_util.h  truncate_util.cc  truncate_util.h  uuid.cc
src/puffin/: demo_puffin.h
(+602 files in other folders)
